test/fixtures/invalid/unclosed_foreach.blade.php
@foreach($items as $item)
    {{ $item }}
    <!-- Missing @endforeach -->
